# cosmos-codespaces-demo

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
cosmosenv/: pyvenv.cfg
src/: app.py
src/cosmos_db.egg-info/: SOURCES.txt  requires.txt
